First draft towards co-authors

--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1543,5 +1543,16 @@ address = {New Jersey, USA}
 	file = {iphc_2016_report:/Users/jepa/Zotero/storage/XAZIXSL6/iphc_2016_report.pdf:application/pdf},
 }
 
+@techreport{NOAA_scen_plan_2020,
+	title = {Scenario Planning: An Introduction for Fishery Managers},
+	institution = {U.S. Dept. of Commer., NOAA. NOAA Technical Memorandum NMFS-OSF-9},
+	author = {Frens, Kathryn M. and Wendy E. Morrison.},
+	year = {2020},
+	pages = {38},
+	
+}
+
+
+
 
 
