--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -243,7 +243,7 @@ Since the ToE method is sensitive to the noise estimate (i.e., historical natura
 
 Here, we adopt the concept of threat point to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs. The concept of threat point comes from Game Theory and has been widely used in shared fisheries management [@Bailey:2010ga; @Sumaila:2013hv; @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg]. In a game theoretic model, a player’s strategy (e.g., to act cooperatively or not) will have direct consequences for other players, which, in turn, will affect the overall outcome of the game [@Bailey:2010ga]. Cooperation will often result in the maximization of benefits for the system rather than for individual players. However, for a cooperative strategy to work, the benefit a player gets must not be less than the benefit under a non-cooperative strategy. Thus, the “threat point” is defined as the minimum payoff a player is willing to receive to cooperate in a game-theoretic model [@Nash:1953vr]. We define the threat point as the minimum required catch proportion of a transboundary stock within an EEZ for a country to engage in cooperative management with their sharing neighbor [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Any proportion below the defined threat point would result in the unilateral management of the stock assuming that no country will be willing to engage in cooperative management if the future catch proportion of the transboundary stock is lower than it has ever been.
 
-First, we estimated the catch proportion as the stock share ratio (SSR) catch of each transboundary stock shared by neighboring nations between 1951 and 2100. We did this by aggregating the projected catch within the $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the stock is present across neighboring EEZs, and then calculated the proportion of the stock's catch held within each EEZ [@PalaciosAbrantes:2020tv]. Second, to reduce the effects of variability, we averaged the calculated proportion of stock occupying a given EEZ into three time periods: the historical time period ($SSR_{th}$) from 1951 to 2005, and two future periods, the early $21^{st}$ century, between 2021 and 2040 ($SSR_{te}$), and the mid $21^{st}$ century, defined as the average of 2041 to 2060 ($SSR_{tm}$). These future time periods were chosen to correspond to the challenges of achieving fisheries-relevant UN-SDGs by 2030 (i.e., the 2030 Agenda), such as SDG 14.4 (end overfishing), SDG 2.4 (ensure sustainable food production systems) and SDG 1.2 (poverty reduction) [@Singh:2017ds; @UnitedNations:1Qe8KIcN]. The analysis was replicated for projected stock distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we defined a threat point for each EEZ’s stock as $SSR_{th} \pm 2 \sigma$, where  is the standard deviation of $SSR_{th}$. Thus, a change of SSR catch beyond an EEZ’s threat point happens when the future SSR catch exceeds two standard deviations of the historical variations in SSR (i.e., when $SSR_{et} \geqq (SSR_{th} + 2 \sigma$) or $SSR_{e,m} \leqq (SSR_{th} - \sigma)$. Finally, we estimated the percentage change in SSR ($\Delta SSR$) of each future time period ($SSR_{tf}$) relative to the historic time period $SSR_{th}$ for each stock whose share ratio exceeded the threat point following [@PalaciosAbrantes:2020tv];
+First, we estimated the catch proportion as the stock share ratio (SSR) catch of each transboundary stock shared by neighboring nations between 1951 and 2100. We did this by aggregating the projected catch within the $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the stock is present across neighboring EEZs, and then calculated the proportion of the stock's catch held within each EEZ [@PalaciosAbrantes:2020tv]. *This way, if, Canada and the US share a specific stock the SSR for Canada could be 20% and that of the US 80%, meaning that Canada holds 20% of the distribution of the stock within its waters and the US the other 80%.*Second, to reduce the effects of variability, we averaged the calculated proportion of stock occupying a given EEZ into three time periods: the historical time period ($SSR_{th}$) from 1951 to 2005, and two future periods, the early $21^{st}$ century, between 2021 and 2040 ($SSR_{te}$), and the mid $21^{st}$ century, defined as the average of 2041 to 2060 ($SSR_{tm}$). These future time periods were chosen to correspond to the challenges of achieving fisheries-relevant UN-SDGs by 2030 (i.e., the 2030 Agenda), such as SDG 14.4 (end overfishing), SDG 2.4 (ensure sustainable food production systems) and SDG 1.2 (poverty reduction) [@Singh:2017ds; @UnitedNations:1Qe8KIcN]. The analysis was replicated for projected stock distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we defined a threat point for each EEZ’s stock as $SSR_{th} \pm 2 \sigma$, where  is the standard deviation of $SSR_{th}$. Thus, a change of SSR catch beyond an EEZ’s threat point happens when the future SSR catch exceeds two standard deviations of the historical variations in SSR (i.e., when $SSR_{et} \geqq (SSR_{th} + 2 \sigma$) or $SSR_{e,m} \leqq (SSR_{th} - \sigma)$. Finally, we estimated the percentage change in SSR ($\Delta SSR$) of each future time period ($SSR_{tf}$) relative to the historic time period $SSR_{th}$ for each stock whose share ratio exceeded the threat point following [@PalaciosAbrantes:2020tv];
 
 <!-- $$ \Delta{SSR_{e,m}} = \frac{(SSR_{f}-SSR_{th})}{SSR_{th}}* 100 $$ -->
 
@@ -315,9 +315,9 @@ grid.raster(img)
 
 <!-- ![Figure 1. Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors (green to yellow). Panel B zooms into specific areas shown within the gray dashed line boundaries in A.](../Figures/Fig1.png) -->
 
-**Most EEZs are expected to see a relative small number of stocks shifting their SSR (Fig. \@ref(fig:toeFigure4)A). On average, EEZs are expected to see changes in SSR on 16% $\pm$ 10 of transboundary stocks increasing to 20% $\pm$ 11 by mid of the $21^{st}$ century. However, this result masks mask large variation in changes across EEZs. By early century, the EEZs of French Guiana (54%), South Africa (59%), Falkland Isl. (61%), Brazil (75%) and Kerguelen Isl., and Pitcairn (both 100%) are projected to see changes in SSR of over 50% in their transboundary stocks. On the other hand, some island territories such as Anguilla are projected to see changes in as low as 2% of their transboundary stocks.**
+**Most EEZs are expected to see a relatively small number of stocks shifting their SSR (Fig. \@ref(fig:toeFigure4)A). On average, EEZs are expected to see changes in SSR on 16% $\pm$ 10 of transboundary stocks increasing to 20% $\pm$ 11 by mid of the $21^{st}$ century. However, this result masks large variation in changes across EEZs. By early century, the EEZs of French Guiana (54%), South Africa (59%), Falkland Island (61%), Brazil (75%) and Kerguelen Island, and Pitcairn (both 100%) are projected to see changes in SSR of over 50% in their transboundary stocks. On the other hand, some island territories such as Anguilla are projected to see changes in as low as 2% of their transboundary stocks.**
 
-**Shifts in the SSR of the top 5 most valuable transboundary stocks of each country are projected to be 61 $\pm$ 18% by 2030 and 72 $\pm$ 17% by 2050 in 83% of the world's EEZs (Figure SX). In some cases, the SSR of one EEZ is projected increase in more than double relative to their neighbors (e.g., from 10% to 30% SSR). Some of these EEZs include Guatemala gaining from Mexico in the Pacific, Cyprus from Greece and Turkey in the Mediterranean Sea, and Russia from Norway and Japan in the Barents Sea and Western Pacific, respectively**
+**Shifts in the SSR of the top 5 most valuable transboundary stocks of each country are projected to be 61 $\pm$ 18% by 2030 and 72 $\pm$ 17% by 2050 in 83% of the world's EEZs (Figure SX). In some cases, the SSR of one EEZ is projected to increase more than double relative to their neighbors (e.g., from 10% to 30% SSR). Some of these EEZs include Guatemala gaining from Mexico in the Pacific, Cyprus from Greece and Turkey in the Mediterranean Sea, and Russia from Norway and Japan in the Barents Sea and Western Pacific, respectively**
 
 
 
@@ -333,7 +333,7 @@ Our findings highlighting early shifts in the shared distribution of transbounda
 
 ## Climate risk hotspots for transboundary fisheries management
 
-Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figs. \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
+**The SDG target 17.16 (Enhance the global partnership for sustainable development) calls for collaborations between stakeholders to support the achievement of the SDGs in all countries, in particular developing countries [@SDGREF]. Such collaborations will be critical if we are to sustainably manage transboundary fisheries under climate change [@Pinsky:2018cb; @Oremus:2020id].** Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of collaborative management plans (Figs. \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
 
 Most management plans that are not designed or prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Focusing on identified “hotspots” will help anticipate any potential increases in and averting fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments (including non-monetary arrangements) [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include: the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) and which has a conservation fund functioning as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States, which as the name implies manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt]; and the Parties to the Nauru Agreement (PNA) an Oceania subregional agreement among 8 Pacific Island countries and Tokelau, which collectively manage the largest tuna fishery in the world, controlling around 50% of the global supply of skipjack tuna (*Katsuwonus pelamis*). The PNA manage fishing effort under a so-called Vessel Day Scheme, an adaptive and equitable system which accounts for shifts in stocks and catches as a result of climate variability [@Bahri:2021wz]. Quota allocation methods based on a stock’s current distribution and/or according to fixed-historical proportions like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].
 
@@ -342,7 +342,14 @@ Even management plans that take into consideration such strategies might not be 
 ## Potential drivers of shift and managing an uncertain future
 
 The early projected range shifts of large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability. For example, sea surface temperature (SST) is projected to increase beyond historical variability by 2030 in 50 to 70% of the global ocean [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and primary production (NPP) are the main indicators of species distributional changes across ocean basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically, in the species distribution model used here (see methods), SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems, while NPP drives temperate regions’ results. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics, where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2019tn], while also explaining the later, and sometimes non-existent, shifts at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
-Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species.Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are responsive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf]. These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (NOTE: See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).** Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+
+Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species. Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are responsive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. **NOTE OPTION A. Therefore, decision-makers are facing the challenge of taking action under an uncertain future. One strategy for that is adapting scenario planning into fisheries management [@NOAA_scen_plan_2020]. This will allow for managers to integrate the uncertainty into planning for managing fisheries. For example, if stocks are expected to shift their distribution by 2036 $\pm$ 28 years (Fig. 2), managers could prepare for a scenario where stocks are currently changing and another where they will shift in 20 years. Scenario planning can also be used to estimate potential looses in revenue when adaptation to climate change is not developed cooperatively [@Sumaila:2020tp; @Miller:2013iv].** This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf].
+
+These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (NOTE: See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).** Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+
+**NOTE: OPTION B, From a decision-making point of view, these uncertainties hinder the management of natural resources forcing managers to taking action under an uncertain future. Rather than wait for more certain methods to be developed (in some cases is unlikely that we could develop them in the next decade or so, Forlicher *et al.* 2016), manager could build scenario planning into fisheries management [@NOAA_scen_plan_2020]. This will allow for managers to integrate the uncertainty into planning for managing fisheries. For example, if stocks are expected to shift their distribution by 2036 $\pm$ 28 years (Fig. 2), managers could prepare for a scenario where stocks are currently changing and another where they will shift in 20 years. Scenario planning can also be used to estimate potential looses in revenue when adaptation to climate change is not developed cooperatively [@Sumaila:2020tp; @Miller:2013iv].**
+
+
 
 <!-- # Conclusion {-} -->
 
